--- a/newtxt.html
+++ b/newtxt.html
@@ -2,15 +2,15 @@
 
 <html>
 	<head>
-		<link rel="stylesheet" href="style2.css">
-	<title>title</title>
+			<link rel="stylesheet" href="style2.css">
+		<title>title</title>
 	
 	
 	</head>
 	<body>
-	just for practise
+	<h1>just for practice</h1>
 	
-	<p>n'stuff</p>
+		<p>n'stuff</p>
 	
 	</body>
 
