--- a/page2.html
+++ b/page2.html
@@ -3,16 +3,16 @@
 <html>
 	<head>
 			<link rel="stylesheet" href="style2.css">
-		<title>title</title>
+		<title>ice cream</title>
 	
 	
 	</head>
 	<body>
 	<img src="ab.png" />
-	<h1>just for practice</h1>
+		<h1>just for practice</h1>
 	
 		<p>n'stuff</p>
-	
+		<h2>moe stuff</h2>
 	</body>
 
 </html>
